# mozilla-bookmark-html-2-keepassxc-csv

./: .gitignore  CMakeLists.txt  README.md  buildproj.BAT  run-the-proj.BAT  test.html  use_Astyle_n_beautify_Minimal.bat
.github/workflows/: build.yml  codeql.yml
src/: main.c
